chore(bg-pattern): use correct pattern color for dark mode

--- a/packages/system/src/styles/init.css
+++ b/packages/system/src/styles/init.css
@@ -45,9 +45,9 @@
   --xy-minimap-node-stroke-width-default: 2;
 
   --xy-background-color-default: #141414;
-  --xy-background-pattern-dots-color-default: #777;
-  --xy-background-pattern-lines-color-default: #777;
-  --xy-background-pattern-cross-color-default: #777;
+  --xy-background-pattern-dots-color-default: #333;
+  --xy-background-pattern-lines-color-default: #333;
+  --xy-background-pattern-cross-color-default: #333;
 }
 
 .xy-flow {
